--- a/xweb/trunk/.classpath
+++ b/xweb/trunk/.classpath
@@ -2,21 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/jaxb/xsdlib-20060615.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb/relaxngDatatype-20020414.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb/jax-qname-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb/jaxb-xjc-1.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb/jaxb-libs-1.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb/jaxb-impl-1.0.6.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb/jaxbcommons-core-1.0.3.jar"/>
-	<classpathentry kind="lib" path="lib/jaxb/jaxb-api-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/ehcache-1.2.4.jar"/>
 	<classpathentry kind="lib" path="lib/xweb-jaxb.jar"/>
-	<classpathentry kind="lib" path="lib/json.jar"/>
-	<classpathentry kind="lib" path="lib/j2ee/servlet-api.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.5.6.SEC02.jar"/>
-	<classpathentry kind="lib" path="lib/spring-webmvc.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=xweb&amp;ivyXmlPath=ivy.xml&amp;confs=*&amp;ivySettingsPath=%24%7Bworkspace_loc%3Axweb%2Flib%2Fivysettings.xml%7D&amp;loadSettingsOnDemand=false&amp;propertyFiles="/>
 	<classpathentry kind="output" path="build/eclipse"/>
 </classpath>
