--- a/xweb/trunk/build.xml
+++ b/xweb/trunk/build.xml
@@ -71,13 +71,16 @@
 		<mkdir dir="${dir.generated}" />
 	</target>
 	
-	<target name="generate.xweb" depends="init,lib-init" 
-		description="Generate JAXB Xweb objects from XML schema">
+	<target name="xjc-init" depends="lib-init">
 		<ivy:resolve file="${basedir}/ivy.xml" conf="xjc"/>
 		<ivy:cachepath pathid="xjc.path" conf="xjc"/>
 		<taskdef name="xjc" classname="org.jvnet.jaxb2_commons.xjc.XJC2Task">
 			<classpath refid="xjc.path"/>
 		</taskdef>
+	</target>
+	
+	<target name="generate.xweb" depends="init,xjc-init" 
+		description="Generate JAXB Xweb objects from XML schema">
 		<delete>
 			<fileset dir="${dir.generated}">
 				<include name="magoffin/matt/xweb/*.java"/>
@@ -86,18 +89,39 @@
 		</delete>
 		<mkdir dir="${dir.generated}"/>
 		<xjc destdir="${dir.generated}" extension="true">
-			<binding dir="${dir.schema}">
+			<!--binding dir="${dir.schema}">
 				<include name="**/*.xjb"/>
-			</binding>
+			</binding-->
 			<schema dir="${dir.schema}">
-			 	<include name="**/*.xsd"/>
+			 	<include name="jaxb-web.xsd"/>
 			</schema>
 			<classpath refid="xjc.path"/>
 			<produces dir="${dir.generated}/magoffin/matt/xweb" 
 							includes="*/.java impl/**/*.java"/>
 		</xjc>
 	</target>
-	
+
+	<target name="generate.xwebtest" depends="init,xjc-init" 
+		description="Generate JAXB XwebTest objects from XML schema">
+		<delete>
+			<fileset dir="${dir.generated}">
+				<include name="magoffin/matt/xwebtest/**"/>
+			</fileset>
+		</delete>
+		<mkdir dir="${dir.generated}"/>
+		<xjc destdir="${dir.generated}" extension="true">
+			<!--binding dir="${dir.schema}">
+				<include name="**/*.xjb"/>
+			</binding-->
+			<schema dir="${dir.schema}">
+			 	<include name="jaxb-web-test.xsd"/>
+			</schema>
+			<classpath refid="xjc.path"/>
+			<produces dir="${dir.generated}/magoffin/matt/xwebtest" 
+							includes="*/.java impl/**/*.java"/>
+		</xjc>
+	</target>
+
 	<target name="compile" description="Compile source files">
 		<mkdir dir="${dir.compile}"/>
 		<javac srcdir="${dir.source}"
@@ -147,6 +171,39 @@
 			</fileset>
 			<fileset dir="${dir.generated}">
 				<include name="magoffin/matt/xweb/**"/>
+			</fileset>
+		</jar>
+	</target>
+
+	<target name="compile.xwebtest" depends="lib-resolve">
+		<ivy:cachepath pathid="compile.path" conf="compile"/>
+		<mkdir dir="${dir.compile}"/>
+		<delete>
+			<fileset dir="${dir.compile}">
+				<include name="magoffin/matt/xwebtest/**"/>
+			</fileset>
+		</delete>
+		<javac srcdir="${dir.generated}"
+			destdir="${dir.compile}"
+			debug="${compile.debug}" 
+			deprecation="${compile.deprecation}" 
+			optimize="${compile.optimize}" 
+			nowarn="${compile.nowarn}"
+			target="1.6"
+			source="1.6">
+			<classpath refid="compile.path" />
+		</javac>
+	</target>
+	
+	<target name="xweb-jaxb-test-jar" description="Generate a JAXB only XWebTest JAR"
+		depends="clean,generate.xwebtest,compile.xwebtest">
+		<mkdir dir="${dir.dist}"/>
+		<jar destfile="${dir.lib}/xweb-jaxb-test.jar">
+			<fileset dir="${dir.compile}">
+				<include name="magoffin/matt/xwebtest/**"/>
+			</fileset>
+			<fileset dir="${dir.generated}">
+				<include name="magoffin/matt/xwebtest/**"/>
 			</fileset>
 		</jar>
 	</target>
