Tweak build settings.

--- a/build.xml
+++ b/build.xml
@@ -85,6 +85,7 @@
 		<javac srcdir="${dir.source}"
 			destdir="${dir.compile}"
 			debug="${compile.debug}" 
+			includeantruntime="false"
 			deprecation="${compile.deprecation}" 
 			optimize="${compile.optimize}" 
 			nowarn="${compile.nowarn}"
@@ -110,6 +111,7 @@
 		<javac srcdir="${dir.generated}"
 			destdir="${dir.compile}"
 			debug="${compile.debug}" 
+			includeantruntime="false"
 			deprecation="${compile.deprecation}" 
 			optimize="${compile.optimize}" 
 			nowarn="${compile.nowarn}"
